syntax = 'proto3';

import "google/protobuf/empty.proto";

import "contrib/coms/protos/data_bundle.proto";
import "contrib/coms/protos/controller_service.proto";
import "contrib/coms/protos/broker.proto";

import "contrib/control/clock/clock.proto";

service Controllable {
    rpc ReceiveDataBundle (Bundle) returns (google.protobuf.Empty);
    rpc ClockUpdate (ClockEvent) returns (google.protobuf.Empty);
    rpc UpdateParameters (ParametersUpdateMessage) returns (google.protobuf.Empty);
    rpc Initialize (InitialParameters) returns (google.protobuf.Empty);
    rpc UpdateBroker (BrokerState) returns (google.protobuf.Empty);
    rpc UpdateCalendar (CalendarMetadata) returns (google.protobuf.Empty);
    //gets the domain on which the strategy operates.
    rpc GetDomain(google.protobuf.Empty) returns (Domain)
}


